# cppsock

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  build_win.bat  cppsock.hpp  cppsock_addressinfo.cpp  cppsock_addressinfo.hpp  cppsock_socket.cpp  cppsock_socket.hpp  cppsock_socketaddr.cpp  cppsock_socketaddr.hpp  cppsock_tcp_client.cpp  cppsock_tcp_client.hpp  cppsock_tcp_listener.cpp  cppsock_tcp_listener.hpp  cppsock_tcp_server.hpp  cppsock_tcp_socket.cpp  cppsock_tcp_socket.hpp  cppsock_tcp_socket_collection.hpp  cppsock_template.hpp  cppsock_test.cpp  cppsock_types.hpp  cppsock_udp_socket.cpp  cppsock_udp_socket.hpp  cppsock_utility.cpp  cppsock_utility.hpp  cppsock_winonly.cpp  makefile
.github/workflows/: c-cpp-ubuntu.yml  c-cpp-win.yml  cmake.yml
